@@ -2,11 +2,14 @@ class CreateProjects < ActiveRecord::Migration
   def self.up
     create_table :projects do |t|
       t.column :name, :string, :null => false
-      t.column :state_id, :integer, :null => false
     end
+    
+    PluginAWeek::Has::States.migrate_up(:projects)
   end
   
   def self.down
+    PluginAWeek::Has::States.migrate_down(:projects)
+    
     drop_table :projects
   end
 end
